# ApiGeniALE

./: .gitignore  .sync-marker  LICENSE  README-SYNC.md  README.md  main.py  pyproject.toml  sync-dev-with-main.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: sync-dev-with-main.yml
app/: models.py
app/controllers/: members.py
app/routes/: members.py
app/schemas/: members.py
doc/: APIGENIE.md  MLD-DataBase.puml  MLD-GeneralDB.puml
src/api/v1/gestionCalendrier/: gestionCalendrier.txt
src/api/v1/gestionMembre/: gestionMembre.txt
src/core/: core.txt
test/: conftest.py
test/factories/: members.py
test/test_controllers/: __init__.py
test/test_routes/: test_members.py
